<resources>
    <string name="download_folder">Abacus Downloads</string>
    <string name="share_text_msg">Abacus child learning application!\nAbacus will help your children learn about Abacus, Numbers, Addition, Subtraction, Multiplication, Division.\n\nDownload Abacus App from Google Play Store \uD83D\uDC47\uD83D\uDC47\uD83D\uDC47\uD83D\uDE0D\uD83D\uDE07\n</string>
    <string name="txt_mail">info.brainapptech@gmail.com</string>
    <string name="material_customization">If you want any customization on material like change to Logo, add watermark, etc.. you can contact us on info.brainapptech@gmail.com</string>
    <string name="privacy_policy_text">Here we declare the Privacy Policy for Abacus - Child Learning Application android mobile application.\n\nAbacus - Child Learning Application is a mathematical tools used for calculation. This app will help your children learn about Abacus, Numbers, Addition, Subtraction, Multiplication, Division.\n\nAbacus is suitable for children age 5 and up, who know about numbers and some basic addition and subtraction.\n\n<b>All application data collocting by Brainapptech Team and we are responsible for that if any issue regarding to data. Content not have any violent, sexual or nudity and drugs so all the people can use it and special kids below 9 year.</b>\n\n<b><font color='#FF0000'>Benefits of Abacus - Child Learning Application : </font></b>\n- Boosting the calculation skills making them better and faster.<br />- Sharpens concentration and comprehension.\n- Increases endurance for stress and pressure.<br />- It helps in better reading and writing.\n- Sharpens listening skills.\n- One of major benefits of Abacus program is that it makes mathematics meaningful, useful and fun for the children.\n- Specially this Abacus program is very effective for those who do not like studying math.\n\n<b><font color='#0000EE'>Give exam</font></b> as per your children level and determine result.\n<b><font color='#0000EE'>Download practice material</font></b> available, its not only math your kids can learn all about around us.\n- Kids can <b><font color='#0000EE'>learn about Pets animals, Farm animals, Mammal animals, Sea animals, Wild animals, Birds, Fruits, Vegetables, Shapes,</font></b> etc..\n- <b><font color='#0000EE'>Count the objects, Fill the blank, Less than &amp; Greater than &amp; Equals, Odds &amp; Evens number.</font></b>\n- Know about Abacus, Identify beads of abacus, Draw beads of abacus.\n- Learn about Number, Addition &amp; Subtraction, Multiplication &amp; Division.\n\nApplication contain ads but its not harmfull to child. We contolled ads to showing in application. We blocked all the Sensitive Categories ads which can harmfull to kids.\n\nWe are responsible for all content which are showing in application and we declare in Privacy Policy.\n\nIn application following permission is used.\n1) INTERNET - For data load and ads loading.\n\nBest Regarding,\nBrainapptech Team.</string>
    <string name="default_notification_channel_id">abacus_public_notification</string>
    <string name="speech_formula_for">formula for %1$s</string>
    <string name="speech_set_minus">set minus %1$s</string>
    <string name="speech_set_plus">set plus %1$s</string>
    <string name="speech_set">Set %1$s</string>
    <string name="random">Random</string>
    <string name="to_">to</string>
    <string name="numbers">Numbers</string>
    <string name="minus">minus</string>
    <string name="plus">plus</string>
    <string name="equal_to">equal to</string>
    <string name="app_download_monitor_channel_name">App Download Monitor</string>
    <string name="app_download_monitor_channel_id">app_download_monitor_service</string>
    <string name="app_download_monitor_channel_description">Help Users monitor the number of Files Downloading through App.</string>
    <string name="app_notification_channel_id">app_notification</string>
    <string name="native_ad_unit_id_test">ca-app-pub-5759468493922763/4658789878</string>
    <string name="banner_ad_unit_id_video">ca-app-pub-5759468493922763/9435037042</string>
    <string name="banner_ad_unit_id_abacus">ca-app-pub-5759468493922763/9552869463</string>
    <string name="banner_ad_unit_id_practise_material">ca-app-pub-5759468493922763/7125661457</string>
    <string name="banner_ad_unit_id_exam">ca-app-pub-5759468493922763/8179760812</string>
    <string name="banner_ad_unit_id_exam_result">ca-app-pub-5759468493922763/3513719503</string>
    <string name="banner_ad_unit_id_sudoku">ca-app-pub-5759468493922763/7314067633</string>
    <string name="banner_ad_unit_id_number_puzzle">ca-app-pub-5759468493922763/4809269700</string>
    <string name="banner_ad_unit_id_exercise">ca-app-pub-5759468493922763/8230392936</string>
    <string name="interstitial_ad_unit_id_exam_complete_show_result">ca-app-pub-5759468493922763/2660158056</string>
    <string name="interstitial_ad_unit_id_exam_complete_close">ca-app-pub-5759468493922763/6703027611</string>
    <string name="interstitial_ad_unit_id_exam_leave">ca-app-pub-5759468493922763/9329190959</string>
    <string name="interstitial_ad_unit_id_abacus_full_screen">ca-app-pub-5759468493922763/4787310717</string>
    <string name="interstitial_ad_unit_id_abacus_half_screen">ca-app-pub-5759468493922763/7616616046</string>
    <string name="interstitial_ad_unit_id_sudoku">ca-app-pub-5759468493922763/1552149652</string>
    <string name="interstitial_ad_unit_id_number_puzzle_step">ca-app-pub-5759468493922763/9842104535</string>
    <string name="interstitial_ad_unit_id_number_puzzle_complete">ca-app-pub-5759468493922763/8865980504</string>
    <string name="interstitial_ad_unit_id_exercise">ca-app-pub-5759468493922763/3939794135</string>
    <string name="no_internet">Please check your network connection.</string>
    <string name="no_internet_working">Your internet is not working</string>
    <string name="for_offline_support_msg">For offline support you need to purchase paid plan.</string>
    <string name="some_thing_wrong">Some thing went wrong, Please try again after sometime.</string>
    <string name="SKIP">SKIP</string>
    <string name="DONE">DONE</string>
    <string name="done_">Done</string>
    <string name="PrivacyPolicy">Privacy Policy</string>
    <string name="PrivacyPolicy_"><font color='#0000EE'><u>Privacy Policy</u></font></string>
    <string name="txtOk">Okay</string>
    <string name="txtYES">YES</string>
    <string name="txtCancel">Cancel</string>
    <string name="txtNo">NO</string>
    <string name="notification">Notification</string>
    <string name="page_title_Number">Pages of Number</string>
    <string name="page_title_Addition">Pages of Addition</string>
    <string name="page_title_AdditionSubtraction">Pages of Addition &amp; Subtraction</string>
    <string name="page_title_Multiplication">Pages of Multiplication</string>
    <string name="page_title_Division">Pages of Division</string>
    <string name="Number">Number</string>
    <string name="Addition">Addition</string>
    <string name="AdditionSubtraction">Addition &amp; Subtraction</string>
    <string name="Multiplication">Multiplication</string>
    <string name="Division">Division</string>
    <string name="title_purchase">Application\'s Purchase Store</string>
    <string name="leave_exam_alert">Leave Exam</string>
    <string name="leave_exercise_alert">Leave Exercise</string>
    <string name="downloadMaterial">Practice Material</string>
    <string name="txt_Toddler_Range">Toddler Range</string>
    <string name="txt_From">From</string>
    <string name="txt_From_to">From %1$d To %2$d</string>
    <string name="txt_set_only">Set %1$d</string>
    <string name="error_range_from">Range from is empty</string>
    <string name="error_range_to">Range to is empty</string>
    <string name="error_range">Minimum 50 toddler is needed</string>
    <string name="txt_To">To</string>
    <string name="txt_Random">Random</string>
    <string name="txt_Reset_when_start">Reset Every Time?</string>
    <string name="txt_start_with_1">Start With 1?</string>
    <string name="txt_Range">Range</string>
    <string name="set_only">Set</string>
    <string name="language_not_supported">This language is not supported!</string>
    <string name="ResettoContinue">Reset to Continue</string>
    <string name="txt_reset_now">START AGAIN</string>
    <string name="txt_purchase">Purchase</string>
    <string name="txt_purchased">Purchased</string>
    <string name="txt_purchase_Now">Purchase Now</string>
    <string name="txt_subscribed">Subscribed</string>
    <string name="txt_subscribe_Now">Subscribe Now</string>
    <string name="txt_page_full_abacus_not_purchased">Sorry you can"'"t access this feature.\nIf you want use this feature then you need to purchase paid plan.</string>
    <string name="txt_page_practise_material_not_purchased">Sorry you can"'"t download this material.\nIf you want download this material then you need to purchase paid plan.</string>
    <string name="txt_purchase_alert">Purchase Alert</string>
    <string name="txt_page_reset_not">Sorry you can"'"t start this page again.\nIf you want to start this page again then you need to purchase paid plan.</string>
    <string name="txt_reset_page">Reset Page Progress</string>
    <string name="txt_reset_page_alert">Are you sure want to reset this page progress and start again?</string>
    <string name="leave_exam_msg">Are you sure want to leave this exam without complete?</string>
    <string name="leave_exercise_msg">Are you sure want to leave this exercise without complete?</string>
    <string name="txt_page_complete">Page Completed</string>
    <string name="txt_page_completed_already_purchased">You already completed this page, if you want you can start again this page.</string>
    <string name="txt_page_completed_msg">Congratulations you completed this page.\nIf you want you can start this page again.</string>
    <string name="txt_page_completed_already">You already completed this page.\nIf want to more abacus then you need to buy purchase paid plan.</string>
    <string name="txt_page_completed_free">If you want more abacus then you need to buy purchase plan.</string>
    <string name="new_version_msg">New version is available on playstore.\nTo continue, please update application.</string>
    <string name="app_update">New Update!</string>
    <string name="yes_i_want_to_start">Yes, I want to start</string>
    <string name="yes_i_m_sure">Yes, I\'m sure</string>
    <string name="txt_free">Free</string>
    <string name="txt_free1">Each lesson has 20 Abacus</string>
    <string name="txt_free2">Abacus Hint</string>
    <string name="txt_free3">Advertisement</string>
    <string name="txt_purchase1"><font color='#FF0000'>Unlimited Abacus</font></string>
    <string name="txt_purchase2">Abacus Hint + Hint Sound</string>
    <string name="txt_purchase3"><font color='#FF0000'>No Advertisement</font></string>
    <string name="txt_purchase6">Reset Page Progress</string>
    <string name="txt_purchase5">Abacus Theme</string>
    <string name="txt_purchase8">Nursery and Maths <font color='#FF0000'>Printable Practice Material</font></string>
    <string name="txt_purchase7"><font color='#FF0000'>Random Number</font> in Abacus Full Mode</string>
    <string name="close">Close</string>
    <string name="continue_to_play_game">Continue to Play</string>
    <string name="no_i_want_to_close">No, I want to close</string>
    <string name="you_completed_this_puzzle_in_moves">You completed this puzzle in %1$s moves</string>
    <string name="this_is_your_best_moves_in_puzzle">This is your best moves in %1$s</string>
    <string name="congratulations">Congratulations…</string>
    <string name="offline_not_supported">Offline is not supported</string>
    <string name="now_offline_support_"><font color='#FF0000'>Offline support</font> for Free mode, Number, Addition, Subtraction, Multiplication, Division, Exercise and Exam.</string>
</resources>