<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_top_curved_24_dp"
    android:backgroundTint="@color/white"
    android:elevation="8dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_medium"
        android:paddingHorizontal="@dimen/activity_padding16"
        android:paddingVertical="@dimen/activity_padding12"
        android:text="@string/close"
        android:textColor="@color/colorSubHeading"
        android:textSize="@dimen/textSizeRegular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/viewLine"
        android:layout_width="64dp"
        android:layout_height="5dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_padding16"
        android:background="@drawable/bg_all_curved_20_tab"
        android:backgroundTint="@color/handle_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:scrollbars="none"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/tvClose">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/headerlinecolor" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_weight="1.5"
                    android:fontFamily="@font/font_bold"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/txt_free"
                    android:textColor="@color/textColor0"
                    android:textSize="@dimen/textSizeLarge" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="36dp"
                    android:background="@color/headerlinecolor" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/font_bold"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/txt_purchase"
                    android:textColor="@color/textColor0"
                    android:textSize="@dimen/textSizeLarge" />
            </androidx.appcompat.widget.LinearLayoutCompat>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/headerlinecolor" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:gravity="center"
                    android:minHeight="30dp"
                    android:text="@string/txt_free1"
                    android:textColor="@color/colorListingHeading"
                    android:textSize="@dimen/textSizeExtraSmall" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/headerlinecolor" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:minHeight="30dp"
                    android:text="@string/txt_purchase1"
                    android:textColor="@color/colorListingHeading"
                    android:textSize="@dimen/textSizeSmall"
                    app:fontFamily="@font/font_bold" />
            </androidx.appcompat.widget.LinearLayoutCompat>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/headerlinecolor" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:gravity="center"
                    android:minHeight="30dp"
                    android:text="@string/txt_free3"
                    android:textColor="@color/colorListingHeading"
                    android:textSize="@dimen/textSizeExtraSmall" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/headerlinecolor" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:minHeight="30dp"
                    android:text="@string/txt_purchase3"
                    android:textColor="@color/colorListingHeading"
                    android:textSize="@dimen/textSizeSmall"
                    app:fontFamily="@font/font_bold" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/headerlinecolor"
                android:visibility="visible" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="visible">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:gravity="center"
                    android:minHeight="30dp"
                    android:text="@string/txt_free2"
                    android:textColor="@color/colorListingHeading"
                    android:textSize="@dimen/textSizeExtraSmall" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/headerlinecolor" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:minHeight="30dp"
                    android:text="@string/txt_purchase2"
                    android:textColor="@color/colorListingHeading"
                    android:textSize="@dimen/textSizeSmall"
                    app:fontFamily="@font/font_bold" />
            </androidx.appcompat.widget.LinearLayoutCompat>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/headerlinecolor" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:gravity="center"
                    android:minHeight="30dp"
                    android:text="@string/offline_not_supported"
                    android:textColor="@color/colorListingHeading"
                    android:textSize="@dimen/_8sdp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/headerlinecolor" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:minHeight="30dp"
                    android:paddingHorizontal="@dimen/_2sdp"
                    android:text="@string/now_offline_support_"
                    android:textColor="@color/colorListingHeading"
                    android:textSize="@dimen/textSizeSmall"
                    app:fontFamily="@font/font_bold" />
            </androidx.appcompat.widget.LinearLayoutCompat>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/headerlinecolor" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="visible">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:gravity="center"
                    android:minHeight="30dp"
                    android:textColor="@color/colorListingHeading"
                    android:textSize="@dimen/_8sdp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/headerlinecolor" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/font_bold"
                    android:gravity="center"
                    android:minHeight="30dp"
                    android:text="@string/txt_purchase5"
                    android:textColor="@color/colorListingHeading"
                    android:textSize="@dimen/textSizeSmall"
                    app:fontFamily="@font/font_bold" />
            </androidx.appcompat.widget.LinearLayoutCompat>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/headerlinecolor"
                android:visibility="visible" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:gravity="center"
                    android:minHeight="30dp"
                    android:textColor="@color/colorListingHeading"
                    android:textSize="@dimen/_8sdp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/headerlinecolor" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:minHeight="30dp"
                    android:text="@string/txt_purchase8"
                    android:textColor="@color/colorListingHeading"
                    android:textSize="@dimen/textSizeSmall"
                    app:fontFamily="@font/font_bold" />
            </androidx.appcompat.widget.LinearLayoutCompat>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/headerlinecolor" />


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:gravity="center"
                    android:minHeight="30dp"
                    android:textColor="@color/colorListingHeading"
                    android:textSize="@dimen/_8sdp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/headerlinecolor" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:minHeight="30dp"
                    android:text="@string/txt_purchase6"
                    android:textColor="@color/colorListingHeading"
                    android:textSize="@dimen/textSizeSmall"
                    app:fontFamily="@font/font_bold" />
            </androidx.appcompat.widget.LinearLayoutCompat>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/headerlinecolor" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:gravity="center"
                    android:minHeight="30dp"
                    android:textColor="@color/colorListingHeading"
                    android:textSize="@dimen/_8sdp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/headerlinecolor" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:minHeight="30dp"
                    android:text="@string/txt_purchase7"
                    android:textColor="@color/colorListingHeading"
                    android:textSize="@dimen/textSizeSmall"
                    app:fontFamily="@font/font_bold" />
            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
